<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登录</string>
    <string name="register">快速注册</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="photo">头像</string>
    <string name="quickstartgame">快速开始游戏</string>    
    <string name="withshe">赶快和附近的那个她，组队开始猜答案吧</string>
    <string name="whthhe">成为万众瞩目的女神，组队开始猜答案吧</string>
	<string name="male">男</string>
	<string name="female">女</string>
</resources>